assets/list_item: make username bold and on small screens disply on own line fixes #4098 fixes #4069

--- a/meinberlin/assets/scss/components/_list_item.scss
+++ b/meinberlin/assets/scss/components/_list_item.scss
@@ -85,6 +85,12 @@
 
 .list-item__author {
     margin-right: 0.3em;
+    font-weight: bold;
+    display: block;
+
+    @media screen and (min-width: $breakpoint-xs) {
+        display: inline-block;
+    }
 }
 
 .list-item__stats {
